--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 .gradle
 /local.properties
 /.idea/caches
+# https://github.com/github/gitignore/blob/main/Android.gitignore
+/.idea/deploymentTargetDropDown.xml
+# https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+/.idea/gradle.xml
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
