--- a/sherlockmidi/build.gradle
+++ b/sherlockmidi/build.gradle
@@ -18,7 +18,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:28.0.0'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    api 'com.android.support:support-v4:28.0.0'
 }
