--- a/sherlockmidi/build.gradle
+++ b/sherlockmidi/build.gradle
@@ -20,5 +20,5 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    api 'com.android.support:support-v4:28.0.0'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
 }
