--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'https://github.com/kshoji/javax.sound.midi-for-Android/raw/master/javax.sound.midi/repository'
+        }
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
