--- a/sherlockmidi/build.gradle
+++ b/sherlockmidi/build.gradle
@@ -19,4 +19,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.13.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // Expose jp.kshoji.javax.sound.midi as part of the sherlockmidi API; sherlockmidi needs it
+    // and clients of sherlockmidi will need it. This way we only have to track it in one place.
+    api 'jp.kshoji:javax-sound-midi:0.0.4:@aar'
 }
