--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,9 @@ android {
 
     defaultConfig {
         applicationId "io.bmaupin.pitchpipe"
-        minSdkVersion 16
+        // Use the lowest minSdkVersion possible; SDK 15 is Android 4.0
+        // For more details, in Android Studio go to File > New > New Project > Next > Help me choose
+        minSdkVersion 15
         targetSdkVersion 30
         versionCode 2
         versionName "0.2.0"
