--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'cn.sherlock:sherlockmidi:1.0'
+    // TODO: Use upstream javax.sound.midi-for-Android once the build is fixed (https://github.com/kshoji/javax.sound.midi-for-Android/issues/20)
+    implementation 'com.github.bmaupin:javax.sound.midi-for-Android:fix-jitpack-build-SNAPSHOT'
+    implementation 'com.github.bmaupin:MidiDriver:1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
